[package]
name = "shift"
version = "0.1.0"
edition = "2021"
authors = ["Mohammed Alwhaeidi"]
description = "A high-performance, secure file transfer tool for enterprises"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
lz4 = "1.24"
indicatif = "0.17"
toml = "0.8"
walkdir = "2.4"
glob = "0.3"
socket2 = "0.5"
libc = "0.2"
ring = "0.17"


[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false 