[package]
name = "shift"
version = "0.1.0"
edition = "2021"
authors = ["Mohammed Alwhaeidi"]
description = "A high-performance, secure file transfer tool for enterprises"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
thiserror = "1.0"
lz4 = "1.24"
indicatif = "0.17"
toml = "0.8"
walkdir = "2.4"
glob = "0.3"
socket2 = "0.5"
ring = "0.17"
async-trait = "0.1"
blake3 = "1.5"
rusqlite = { version = "0.31", features = ["bundled"] }
quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rcgen = "0.12"
rustls = { version = "0.23", default-features = false, features = ["std"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2", optional = true }
raptorq = { version = "1.8", optional = true }
tokio-uring = { version = "0.5", optional = true }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls-pemfile"]
fec = ["dep:raptorq"]
# Linux only: use io_uring for async file reads when running inside tokio_uring::start()
iouring = ["dep:tokio-uring"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false 